<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javiervasquez.chefs.Activities.RegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_chefs_2"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="40sp"
            android:layout_margin="10sp">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:weightSum="2"
                    android:orientation="horizontal">
                    <RadioButton
                        android:id="@+id/RB_User"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/height_2"
                        android:text="@string/usuario"
                        android:textColor="@color/ultra_light_white"
                        android:buttonTint="@color/ultra_light_white"
                        android:gravity="center"
                        android:layout_margin="10sp"
                        android:textSize="@dimen/Text_Dimens_H2.5"
                        android:background="@drawable/white_rounded_frame"/>
                    <RadioButton
                        android:id="@+id/RB_Chef"
                        android:layout_width="0sp"
                        android:layout_weight="1"
                        android:layout_height="@dimen/height_2"
                        android:text="@string/chef"
                        android:textColor="@color/ultra_light_white"
                        android:buttonTint="@color/ultra_light_white"
                        android:gravity="center"
                        android:layout_margin="10sp"
                        android:textSize="@dimen/Text_Dimens_H2.5"
                        android:background="@drawable/white_rounded_frame"/>
                </RadioGroup>
            <EditText
                android:id="@+id/ET_Full_Name"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/nombre"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/ET_Documento"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/documento_identidad"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textEmailAddress"/>
            <EditText
                android:id="@+id/ET_Email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/email"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textEmailAddress"/>

            <EditText
                android:id="@+id/ET_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/contrasena"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textPassword"/>
            <EditText
                android:id="@+id/ET_Repeat_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/repetir_contrasena"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/ET_Address"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/direccion"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textCapSentences"/>

            <EditText
                android:id="@+id/ET_Phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/celular"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="number"/>

            <EditText
                android:id="@+id/ET_Escuela_Gastronomica"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/escuela_gastronomica"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textCapSentences"/>

            <EditText
                android:id="@+id/ET_Cuenta_Ahorros"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/cuenta_ahorros"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="number"/>


            <EditText
                android:id="@+id/ET_Banco"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"
                android:hint="@string/banco"
                android:paddingLeft="20sp"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:textColorHint="@color/ultra_light_white"
                android:inputType="textCapSentences"/>
            <Button
                android:id="@+id/BT_Aceptar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:layout_margin="10sp"
                android:background="@drawable/white_rounded"
                android:textColor="@color/colorPrimaryDark"
                android:text="Aceptar"
                android:textAllCaps="false"
                android:textSize="@dimen/Text_Dimens_H3"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
