<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/back_chefs_2"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_2"
            android:text="@string/nuevo_plato"
            android:gravity="center"
            android:background="@color/ultra_light_white"
            android:id="@+id/textView"
            android:textSize="@dimen/Text_Dimens_H2.5"
            android:textColor="@color/authui_colorPrimaryDark"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#350000ff"
            android:layout_below="@+id/textView">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="20sp">
                <ImageView
                    android:id="@+id/IV_Foto"
                    android:layout_width="match_parent"
                    android:layout_height="200sp"
                    android:src="@drawable/chefs_logo_2"
                    android:scaleType="centerCrop"
                    android:background="@android:color/white"
                    android:layout_margin="15sp"/>
                <EditText
                    android:id="@+id/ET_Name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/nombre_plato"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textCapSentences"/>
                <EditText
                    android:id="@+id/ET_Descripcion"
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/descripcion"
                    android:paddingLeft="20sp"
                    android:gravity="top"
                    android:paddingTop="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textMultiLine"/>
                <EditText
                    android:id="@+id/ET_Cantidad"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/cantidad"
                    android:paddingLeft="20sp"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textCapSentences"/>
                <EditText
                    android:id="@+id/ET_Ingredientes"
                    android:layout_width="match_parent"
                    android:layout_height="80sp"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/ingredientes"
                    android:paddingLeft="20sp"
                    android:gravity="top"
                    android:paddingTop="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textMultiLine"/>
                <EditText
                    android:id="@+id/ET_Fecha"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/fecha"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:inputType="date"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white" />
                <EditText
                    android:id="@+id/ET_Hora"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/hora"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:inputType="datetime"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white" />
                <EditText
                    android:id="@+id/ET_Precio"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/precio"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white" />
                <Button
                    android:id="@+id/BT_Aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:layout_margin="10sp"
                    android:background="@drawable/white_rounded"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Aceptar"
                    android:inputType="textCapCharacters"
                    android:textAllCaps="false"
                    android:textSize="@dimen/Text_Dimens_H3"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
