<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javiervasquez.chefs.Activities.LoginActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/back_chefs_2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="2"
        android:layout_margin="20sp">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1"
            android:src="@drawable/chefs_logo_2"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0sp"
            android:layout_weight="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:id="@+id/ET_Email"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:textColorHint="@color/ultra_light_white"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:textColor="@color/ultra_light_white"
                android:layout_margin="10sp"
                android:paddingLeft="20sp"/>
            <EditText
                android:id="@+id/ET_Password"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:background="@drawable/white_rounded_frame"
                android:textColorHint="@color/ultra_light_white"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:layout_margin="10sp"
                android:textColor="@color/ultra_light_white"
                android:textSize="@dimen/Text_Dimens_H2.5"
                android:paddingLeft="20sp"/>

            <Button
                android:id="@+id/BT_Login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:text="@string/iniciar_sesion"
                android:textAllCaps="false"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/Text_Dimens_H3"
                android:background="@drawable/white_rounded"
                android:layout_margin="10sp"/>

            <Button
                android:id="@+id/BT_Register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_2"
                android:text="@string/registrate"
                android:textAllCaps="false"
                android:textColor="@color/ultra_light_white"
                android:textSize="@dimen/Text_Dimens_H3"
                android:background="@drawable/white_rounded_frame"
                android:layout_margin="10sp"/>
        </LinearLayout>
        </ScrollView>
    </LinearLayout>

</RelativeLayout>
