<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javiervasquez.chefs.Fragments.ChefNuevoPlatoFragment">



    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingTop="40sp"
                android:layout_margin="10sp">
                <com.oswaldogh89.picker.ImagePicker
                    android:id="@+id/picker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                </com.oswaldogh89.picker.ImagePicker>
                <EditText
                    android:id="@+id/ET_Full_Name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/nombre"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:id="@+id/ET_Documento"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/documento_identidad"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textEmailAddress"/>
                <EditText
                    android:id="@+id/ET_Email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/email"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/ET_Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/contrasena"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textPassword"/>
                <EditText
                    android:id="@+id/ET_Repeat_Password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:background="@drawable/white_rounded_frame"
                    android:layout_margin="10sp"
                    android:hint="@string/repetir_contrasena"
                    android:paddingLeft="20sp"
                    android:textSize="@dimen/Text_Dimens_H2.5"
                    android:textColor="@color/ultra_light_white"
                    android:textColorHint="@color/ultra_light_white"
                    android:inputType="textPassword"/>
                <Button
                    android:id="@+id/BT_Aceptar"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/height_2"
                    android:layout_margin="10sp"
                    android:background="@drawable/white_rounded"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="Aceptar"
                    android:textAllCaps="false"
                    android:textSize="@dimen/Text_Dimens_H3"/>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</FrameLayout>
